--- a/style.css
+++ b/style.css
@@ -67,15 +67,40 @@ h5{
     font-size: larger;
 }
 .container{
-    width: 100%;
     display: flex;
+    justify-content: center;
     align-items: center;
+    margin-top: 20px;
     padding-left: 20px;
+    width: 100%;
 }
-.container .left{
-    line-height: 2rem;
+.left{
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+    height: 80vh;
+    gap: 30px;
+}
+.left-icon {
+    display: flex;
+    gap: 20px;
+    justify-content: start;
+    align-items: center;
+}
+.right{
     width: 40%;
+    height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: transparent;
 }
+.left-content {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
 .container-icon {
     display: flex;
     gap: 20px;
@@ -87,24 +112,25 @@ h5{
     font-weight: bolder;
     margin: 0;
 }
-.Box {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 20px;
-    box-shadow: whitesmoke 0px 0px 15px 0px;
-    padding: 0px;
-    margin: 0;
+.Box{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+    width: 70%;
     border-radius: 10px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    gap: 10px;
+    padding: 10px;
+    box-shadow: 0px 0px 5px 0px white;
 }
 .Box-icon {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
-    margin-top: 20px;
-    padding: 0;
+    width: 40%;
+    height: 100px;
     gap: 5px;
 }
 .Box-icon i{
@@ -117,10 +143,9 @@ h5{
     width: 60%;
     justify-content: center;
     align-items: center;
-    height: 60vh;
 }
 .right .Rgcard{
-    height: 45vh;
+    height: 325px;
     width: 300px;
     align-items: center;
     padding: 20px;
@@ -140,7 +165,7 @@ input{
     outline: none;
 }
 button{
-    height: 30px;
+    height: 45px;
     background-color: rgb(255, 165, 0);
     border: none;
     border-radius: 5px;
@@ -149,7 +174,7 @@ button{
 @media screen and (max-width: 768px){
     body{
         backdrop-filter: blur(5px) brightness(1);
-        height: fit-content;
+        height:max-content;
     }
     nav{
         width: 100%;
@@ -159,56 +184,53 @@ button{
     }
     .container{
         width: 100%;
-        margin-left: 0px;
-        padding-left: 0px;
+        flex-direction: column;
+        margin: 0px;
+        padding: 0px;
+    }
+    .container-icon{
+        width: 100%;
         flex-direction: column;
     }
     .left{
+        flex-direction: column;
         align-items: start;
         width: 100%;
-        flex-direction: column;
+        padding: 10px;
     }
-    .left h4{
-        width: 150px;
-        text-align: start;
-        flex-direction: column;
-    }
-    .Box{
-        width: 10%;
-        text-align: start;
-        align-items: start;
-        margin: 0;
-    }
-    .Box-icon{
-        width: 10%;
-        align-items: center;
-        flex-direction: column;
-        padding-left: 0px;
-        margin-left: 0px;
-    }
-    .Box h4{
-        align-items: start;
+    .left-content{
         text-align: center;
+        flex-direction: column;
+        width: 100%;
+        padding: 20px;
+    }
+    .left {
+        width: 100%;
+        height: max-content;
+    }
+    .left-icon {
+        width: 100%;
+        flex-wrap: wrap;
+        justify-content: center;
+        padding: 6px;
     }
     .right{
-        align-items: center;
         width: 100%;
-        flex-direction: column;
-        margin: 0;
+        height: max-content;
+        margin: 20px;
     }
-    .container-icon{
-        flex-direction: column;
+    .Box{
+        width: 100%;
+    }
+    .Box-icon{
+        text-align: center;
+    }
+    .input {
+        width: 100%;
     }
     .Rgcard{
-        align-items: center;
-        margin-left: 0px;
-        padding-left: 0px;
-    }
-    .input{
         width: 100%;
-        height: 100%;
-    }
-    .input button{
-        height: 35px;
+        margin-top: 20px;
+        background-color: white;
     }
 }
